# scafoldr

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  compose.override.yaml  compose.yaml  requirements.txt
core/: Dockerfile  README.md  pyproject.toml  requirements.txt
core/src/api/: main.py  routes.py
core/src/cli/: main.py
core/src/config/: config.py
core/src/core/: orchestrator.py
core/src/core/agents/: base_agent.py  coordinator.py  openai_agent.py  tensorzero.toml  tensorzero_agent.py
core/src/core/ai_providers/: anthropic_provider.py  base_ai_provider.py  bedrock_provider.py  ollama_provider.py  open_ai_provider.py
core/src/core/chat/: base_chat.py  chat_factory.py
core/src/core/company/: __init__.py  scafoldr_inc.py
core/src/core/dbml_ai_assistant/: dbml_ai_agent.py  prd_ai_agent.py  prompt.py
core/src/core/generators/: README.md  base_generator.py  config_loader.py  configurable_generator.py  (+4 more)
core/src/models/: chat.py  dbml_ai_agent.py  generate.py  scafoldr_schema.py  template_config.py
core/templates/java_spring/: .dockerignore  Dockerfile  HELP.md  compose.yaml  pom.xml  scafoldr_template_config.json
core/templates/next-js/: .env.example  .env.local.j2  CRUD_ABSTRACTION.md  Dockerfile  README.md  compose.j2  compose.yaml  drizzle.config.ts  eslint.config.mjs  independentModules.jsonc  package-lock.json  package.j2  package.json  scafoldr_template_config.json
core/templates/node_express_js/: .env.example  Dockerfile  README.md  compose.yaml  scafoldr_template_config.json  server.js
(+422 files in other folders)
